# libaiff

./: .gitignore  LICENSE  MANUAL.html  Makefile.am  Makefile.in  README  aifx.c  asm_ppc.h  c_label.h  configure  configure.ac  extended.c  extended_x87.S  float32.c  g711.c  iff.c  libaiff.c  lpcm.c  pascal.c  private.h  swap_ppc.S
libaiff/: config.h.in  config.vc.h  libaiff.h
